# duh

./: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml
alembic/: env.py
alembic/versions/: 001_v01_baseline.py  002_v02_schema.py  003_v02_votes.py  004_v03_api_keys.py  005_v05_users.py
client/: pyproject.toml
client/src/duh_client/: __init__.py  client.py
client/tests/: test_client.py
docker/: config.toml
docs/: api-reference.md  batch-mode.md  export.md  index.md  mcp-server.md  python-client.md  troubleshooting.md  web-quickstart.md  web-ui.md
docs/cli/: ask.md  batch.md  cost.md  export.md  feedback.md  index.md  mcp.md  models.md  recall.md  serve.md  show.md  threads.md
docs/concepts/: cost-management.md  how-consensus-works.md  memory-and-persistence.md  providers-and-models.md
docs/getting-started/: configuration.md  installation.md  quickstart.md
docs/guides/: authentication.md  docker.md  local-models.md  monitoring.md  production-deployment.md
docs/python-api/: library-usage.md
docs/reference/: benchmarks.md  config-reference.md  errors.md
memory-bank/: activeContext.md  competitive-landscape.md  decisions.md  progress.md  projectbrief.md  quick-start.md  roadmap.md  setup.md  techContext.md  tmp-devils-advocate.md  tmp-product-strategy.md  tmp-research-analysis.md  tmp-systems-architecture.md  toc.md  v03-build-status.md
phase0/: __init__.py  analyze.py  config.py  judge.py  methods.py  models.py  prompts.py  questions.json  questions.py  runner.py
src/duh/: __init__.py  __main__.py  calibration.py
tests/: conftest.py
tests/fixtures/: providers.py  responses.py
tests/integration/: test_consensus_loop.py  test_decompose_loop.py  test_taxonomy_outcomes.py  test_tool_augmented.py  test_v03_api.py  test_voting_loop.py
tests/load/: conftest.py  test_load.py
tests/sycophancy/: conftest.py  test_confidence_impact.py  test_detection.py  test_known_flaws.py
tests/unit/: test_api_app.py  test_api_ask.py  test_api_crud.py  test_api_keys.py  test_api_middleware.py  test_api_threads.py  test_api_ws.py  test_auth.py  test_backup.py  test_calibration.py  test_challenge_handler.py  test_cli.py  test_cli_batch.py  test_cli_calibration.py  test_cli_decompose.py  test_cli_display.py  test_cli_export.py  test_cli_feedback.py  test_cli_tools.py  test_cli_voting.py  test_commit_handler.py  test_confidence_scoring.py  test_config.py  test_config_v02.py  test_errors.py  (+43 more)
web/: index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts  vitest.config.ts
(+162 files in other folders)
