[project]
name = "duh"
version = "0.1.0dev0"
description = "Multi-model consensus engine — because one LLM opinion isn't enough"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20.0",
    "alembic>=1.13",
    "rich>=13.0",
    "click>=8.1",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "google-genai>=1.0",
]

[project.scripts]
duh = "duh.cli.app:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/duh"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.optional-dependencies]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.8",
    "mypy>=1.13",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
]

[tool.coverage.run]
source = ["duh"]
branch = true

[tool.coverage.report]
fail_under = 0
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.",
]

[tool.ruff]
target-version = "py311"
src = ["src", "tests"]
line-length = 88

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "RUF",  # ruff-specific
]

[tool.ruff.lint.isort]
known-first-party = ["duh"]

[tool.mypy]
strict = true
python_version = "3.11"
mypy_path = "src"
packages = ["duh"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
